添加小男孩走动动画

--- a/index.html
+++ b/index.html
@@ -105,9 +105,8 @@
         <p>
             
         </p>
-        <p style="position:relative;">
-           <div class="charector walk"></div> 
-            <pre>
+        <p>
+            <pre style="position:relative;">
                 .walk {
                    /* 规定@keyframes 动画的名称 */
                    animation-name: person-walk;
@@ -136,6 +135,7 @@
                        background-position: -0px -291px;
                    }
                 }
+                <div class="charector walk"></div>
             </pre>            
         </p>  
         <p>解释下定义的样式: 
