添加太阳一天移动动画

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         </p>
 
 
-        <h5>动画- animation： 扩展学习--css精灵技术练习</h5> 
+        <h5>动画- animation： 扩展学习--css精灵技术练习和其他动画练习</h5> 
         <p>
             小鸟动画的实现
         </p>
@@ -190,6 +190,16 @@
 
         </pre>
         <p>技术点：小鸟移动使用了css3的transition属性。</p>
+
+        <p>
+            太阳一天的移动
+        </p>
+
+        <div class="boxShow black">
+            <div id="sun" class="sun rotation"></div>
+        </div>
+        <p></p>
+        <p>技术点： 通过css3 transform属性，修改 X、Y轴值实现太阳一天动作</p>        
 
         </section>
 
