添加移到小男孩上暂停走动效果

--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
                    -webkit-animation-timing-function: step-start;
            }
 
+           .walk:hover{
+                animation-play-state: paused;
+                -webkit-animation-play-state: paused; 
+           }
+
             @keyframes person-walk {
                0% {
                    background-position: -0px -291px;
